--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,28 @@
-theme: jekyll-theme-slate
+title: zb1749(大饼一张)
+description: 大饼一张的博客
+author: zb1749
+logo: /static/img/avatar.png
+github: https://github.com/
+about: (was) a JAVA Coder
+
+baseurl: "https://dbyz.tk/"
+url: "https://dbyz.tk"
+
+allowsearch: true
+
+disqus_shortname: dbyz
+google_analytics: UA-126196847-1
+
+share:
+  twitter_username: \#
+  fb_appid: 000000000000
+
+
+enableTags: true
+tagarray: []
+
+paginate: 20
+per_page: 20
+paginate_path: "/page:num/"
+markdown: kramdown
+gems: [jekyll-paginate, jekyll-gist]
