--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ logo: /static/img/avatar.png
 github: https://github.com/
 about: (was) a JAVA Coder
 
-baseurl: "https://dbyz.tk/"
+baseurl: "https://dbyz.tk"
 url: "https://dbyz.tk"
 
 allowsearch: true
